feat(settings-and-card-component): Add settings layout and card dinamic display

--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,1 +1,42 @@
-<p>settings works!</p>
+<div class="d-flex">
+
+    <!-- Left box-->
+    <div class="col col-6  d-flex flex-column mt-5">
+
+        <div class="ps-4">
+            <div class="d-flex ">
+                <div class="d-flex justify-content-center col col-2">
+                    <i class="fa-solid fa-arrow-left text-color"></i>
+                </div>
+                <div class="col col-10">
+                    <h5 class="text-color ">¡Hola! Configuremos tu perfil</h5>
+                </div>
+
+            </div>
+
+            <div class="d-flex">
+
+                <div class="col col-2">
+
+                </div>
+                <div class="col col-10">
+                    <p class="text-muted small ">Queremos conocerte mejor.</p>
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+        <app-card>
+
+        </app-card>
+
+    </div>
+    <!-- right box-->
+    <div class="col col-6 border border-black">
+
+    </div>
+
+</div>
