--- a/src/app/components/shared/card/card.component.html
+++ b/src/app/components/shared/card/card.component.html
@@ -1,17 +1,81 @@
-<div class="card">
-    <div class="card-border-top">
-    </div>
-    <p class="user-name"> Imagen perfil</p>
-    <div class="img">
-        <img src="" alt="">
-    </div>
-    <div>
-        <div>
-            <input type="file" name="" id="">
+<div class="col col-6 trainer-card  px-4 py-5 rounded-5 m-auto">
+
+    <p class="user-name text-center"> Jose Luis</p>
+    <div class="d-flex justify-content-center mb-3">
+        <div class="div-img d-flex justify-content-center align-items-center  rounded-circle overflow-hidden"
+            style="width: 120px; height: 120px;">
+            <img src="assets/no_profile.webp" alt="Foto de perfil" class="w-100 h-100" style="object-fit: cover;">
         </div>
-        <div>
-            <i class="fa-solid fa-trash bg-danger"></i>
+
+    </div>
+
+
+
+    <div class="m-0 p-0 d-none">
+        <div class="d-flex justify-content-between m-0 p-0">
+            <strong>
+                <p class="size-md">
+                    Pasatiempo:
+                </p>
+            </strong>
+
+            <p class="size-md">
+                Ver series
+
+            </p>
         </div>
+
+        <div class="d-flex justify-content-between">
+            <strong>
+                <p class="size-md">
+                    Edad:
+                </p>
+            </strong>
+
+            <p class="size-md">
+                18
+
+            </p>
+        </div>
+
+
+        <div class="d-flex justify-content-between">
+            <strong>
+                <p class="size-md">
+                    DUI:
+                </p>
+            </strong>
+
+            <p class="size-md">
+                05643215-9
+
+            </p>
+        </div>
+
+    </div>
+
+    <div class="d-flex div-add-file rounded px-2 py-1 ">
+        <div class="d-flex  col col-12 justify-content-between">
+
+            <!-- Input-->
+
+            <div>
+                <label for="add-file" class="size-sm text-color">Adjunta una foto</label>
+                <input type="file" id="add-file">
+            </div>
+
+
+            <!--  end of input-->
+
+            <div class="d-none">
+                <i class="fa-solid fa-trash  size-sm"></i>
+            </div>
+
+            <div class="">
+                <i class="fa-solid fa-cloud-arrow-up  size-sm"></i>
+            </div>
+        </div>
+
     </div>
 
 </div>
