--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,7 +1,7 @@
-<div class="d-flex">
+<div class="row ">
 
     <!-- Left box-->
-    <div class="col col-6  d-flex flex-column mt-5">
+    <div class="col-12 col-sm-6 d-flex flex-column mt-5 float-start">
 
         <div class="ps-4">
             <div class="d-flex ">
@@ -35,8 +35,29 @@
 
     </div>
     <!-- right box-->
-    <div class="col col-6 border border-black">
+    <div class="col-12 col-sm-6 mt-5 float-start">
 
+        <div class="ps-4">
+            <div class="d-flex ">
+
+                <div class="col col-10">
+                    <h5 class="text-color ">Tu información</h5>
+                </div>
+
+            </div>
+
+            <div class="d-flex">
+
+
+                <div class="col col-10">
+                    <p class="text-muted small ">Completa la siguiente información para completar tu perfil.</p>
+                </div>
+
+            </div>
+
+        </div>
+
+        <app-form></app-form>
     </div>
 
 </div>
