feat(list-component): get pokemos from api and list them
set updatePartial method for trainerProfileSubject on trainer service and test it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<app-header>
+<app-mobile-header>
+</app-mobile-header>
 
+<app-header>
 </app-header>
 
-<app-settings>
 
-</app-settings>
+<!-- <app-home></app-home> -->
+<!-- <app-loading></app-loading> -->
+
+<app-settings></app-settings>
