--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,1 +1,12 @@
-<p>loading works!</p>
+<div class="div-loading d-flex  h-auto">
+
+    <div class="border border-black align-items-center m-auto">
+        <div>
+            <img src="assets/Loading-Pokemon.gif" alt="">
+        </div>
+        <div>
+            <h3 class="text-color text-center">Cargando...</h3>
+        </div>
+    </div>
+
+</div>
