--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,57 @@
-<p>home works!</p>
+<div class="row ">
+
+    <!-- Left box-->
+    <div class="col-12 col-sm-6 d-flex flex-column mt-5 float-start border border-black">
+
+
+
+        <div class="ps-4 py-4">
+
+
+            <div class="d-flex">
+
+                <div class="col col-2">
+
+                </div>
+                <div class="col col-10 d-flex justify-content-around p-2 align-items-center">
+                    <div>
+                        <h5 class="text-black fw-bold">¡Hola! Jose</h5>
+                    </div>
+
+                    <div class="d-flex me-5 div-border rounded justify-items-center  px-3" type="button">
+                        <div class="d-flex px-2 align-items-center">
+                            <div class="me-2 d-flex h-100 ">
+                                <h6 class="text-color">Jose</h6>
+                            </div>
+                            <div class="h-100">
+                                <strong><i class="fa-solid fa-arrow-down text-color"></i></strong>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+        <app-card>
+
+        </app-card>
+
+    </div>
+    <!-- right box-->
+    <div class="col-12 col-sm-6 mt-5 float-start border border-black">
+
+
+
+
+
+
+
+    </div>
+
+</div>
