feat(selection-component): get pokemons and send them to subject
add new interaface pokemonCard to handle each pokemon properties

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,6 @@
 <!-- <app-home></app-home> -->
 <!-- <app-loading></app-loading> -->
 
-<app-settings></app-settings>
+<router-outlet></router-outlet>
+<!-- 
+<app-list></app-list> -->
