--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,6 +1,6 @@
-<div class="div-loading d-flex  h-auto">
+<div class="div-loading d-flex  ">
 
-    <div class="border border-black align-items-center m-auto">
+    <div class="border border-black  m-auto">
         <div>
             <img src="assets/Loading-Pokemon.gif" alt="">
         </div>
