--- a/src/app/components/mobile-header/mobile-header.component.html
+++ b/src/app/components/mobile-header/mobile-header.component.html
@@ -5,7 +5,8 @@
         <div class="d-flex  div-border rounded justify-items-center " type="button">
             <div class="d-flex px-3">
                 <div class="me-2">
-                    <h6 class="text-color">Jose</h6>
+
+                    <h6 class="text-color" *ngIf="validateProfileInfofields()">{{trainerProfile?.name}}</h6>
                 </div>
                 <div>
                     <strong><i class="fa-solid fa-arrow-down text-color"></i></strong>
