--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -3,58 +3,77 @@
     <!-- Left box-->
     <div class="col-12 col-md-6 d-flex flex-column mt-5 float-start ">
 
-        <div class="ps-4 d-none">
-            <div class="d-flex ">
-                <div class="d-flex justify-content-center col col-2">
-                    <i class="fa-solid fa-arrow-left text-color"></i>
+        <div class="ps-4 ">
+
+            <!-- setting profile-->
+
+            <div *ngIf="!validateProfileInfofields()">
+                <div class="d-flex ">
+                    <div class="d-flex justify-content-center col col-2">
+                        <i class="fa-solid fa-arrow-left text-color"></i>
+                    </div>
+                    <div class="col col-10">
+                        <h6 class="text-color ">¡Hola! Configuremos tu perfil</h6>
+                    </div>
+
                 </div>
-                <div class="col col-10">
-                    <h6 class="text-color ">¡Hola! Configuremos tu perfil</h6>
+
+                <div class="d-flex">
+
+                    <div class="col col-2">
+
+                    </div>
+                    <div class="col col-10">
+                        <p class="text-muted text-size-xsm ">Queremos conocerte mejor.</p>
+                    </div>
+
                 </div>
 
             </div>
 
-            <div class="d-flex">
+            <!-- end of setting profile-->
 
-                <div class="col col-2">
 
-                </div>
-                <div class="col col-10">
-                    <p class="text-muted text-size-xsm ">Queremos conocerte mejor.</p>
+            <!-- almost there-->
+            <div *ngIf="validateProfileInfofields()">
+                <!-- if profileTrainer has data -->
+                <div class="ps-4 mb-4">
+                    <div class="d-flex ">
+                        <div class="d-flex justify-content-center col col-2">
+                            <i class="fa-solid fa-arrow-left text-color"></i>
+                        </div>
+                        <div class="col col-10">
+                            <h6 class="text-color ">¡Ya casi términamos!</h6>
+                        </div>
+
+                    </div>
+
+                    <div class="d-flex">
+
+                        <div class="col col-2">
+
+                        </div>
+                        <div class="col col-10">
+                            <p class="text-muted text-size-xsm">Revisa la información, y completa lo solicitado.</p>
+                        </div>
+
+                    </div>
+
                 </div>
 
             </div>
+
+            <!--end of almost there-->
+
+            <app-card> </app-card>
 
         </div>
 
-        <div class="ps-4 mb-4">
-            <div class="d-flex ">
-                <div class="d-flex justify-content-center col col-2">
-                    <i class="fa-solid fa-arrow-left text-color"></i>
-                </div>
-                <div class="col col-10">
-                    <h6 class="text-color ">¡Ya casi términamos!</h6>
-                </div>
-
-            </div>
-
-            <div class="d-flex">
-
-                <div class="col col-2">
-
-                </div>
-                <div class="col col-10">
-                    <p class="text-muted text-size-xsm">Revisa la información, y completa lo solicitado.</p>
-                </div>
-
-            </div>
-
-        </div>
 
 
 
 
-        <app-card> </app-card>
+
 
 
 
@@ -64,67 +83,71 @@
     <!-- right box-->
     <div class="col-12 col-md-6 mt-5 float-start ">
 
-        <div class="mt-5 ms-4">
-            <div class="d-flex ">
+        <div *ngIf="!validateProfileInfofields()">
+            <div class="mt-5 ms-4">
+                <div class="d-flex ">
 
-                <div class="col col-10">
-                    <h5 class="text-color ">Tu información</h5>
+                    <div class="col col-10">
+                        <h5 class="text-color ">Tu información</h5>
+                    </div>
+
+                </div>
+
+                <div class="d-flex">
+
+
+                    <div class="col col-10">
+                        <p class="text-muted small ">Completa la siguiente información para completar tu perfil.</p>
+                    </div>
+
                 </div>
 
             </div>
 
-            <div class="d-flex">
+            <div class="">
 
-
-                <div class="col col-10">
-                    <p class="text-muted small ">Completa la siguiente información para completar tu perfil.</p>
-                </div>
-
+                <app-form></app-form>
             </div>
-
-        </div>
-
-        <div class="">
-
-            <app-form></app-form>
         </div>
 
         <!-- Select pokemons-->
 
-        <div class="p-5
-        d-none">
-            <div class="d-flex ">
+        <div *ngIf="validateProfileInfofields()">
+            <div class="mb-5
+        ">
+                <div class="d-flex ">
 
-                <div class="col col-10">
-                    <h6 class="text-color ">Pokémon</h6>
+                    <div class="col col-10">
+                        <h6 class="text-color ">Pokémon</h6>
+                    </div>
+
                 </div>
 
-            </div>
-
-            <div class="d-flex">
+                <div class="d-flex">
 
 
-                <div class="col col-10">
-                    <p class="text-muted text-size-xsm">Selecciona 3 Pokémon para que sean parte de tu equipo.</p>
+                    <div class="col col-10">
+                        <p class="text-muted text-size-xsm">Selecciona 3 Pokémon para que sean parte de tu equipo.</p>
+                    </div>
+
                 </div>
 
-            </div>
+                <div class="d-flex">
+                    <form class="d-flex w-100" role="search">
+                        <input class="form-control form-control-sm me-2 bg-light small" type="search"
+                            placeholder=" Buscar por índice, nombre..." aria-label="Search" />
 
-            <div class="d-flex">
-                <form class="d-flex w-100" role="search">
-                    <input class="form-control form-control-sm me-2 bg-light small" type="search"
-                        placeholder=" Buscar por índice, nombre..." aria-label="Search" />
+                    </form>
 
-                </form>
+                </div>
 
             </div>
 
         </div>
 
 
-
-        <div class="px-5 d-none">
-            <app-list></app-list>
+        <div class="px-5 " *ngIf="validateProfileInfofields()">
+            <app-selection></app-selection>
         </div>
     </div>
 
