--- a/src/app/components/settings/selection/selection.component.css
+++ b/src/app/components/settings/selection/selection.component.css
@@ -1,7 +1,7 @@
 .pokemon-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
+    gap: 40px;
 
 }
 
@@ -10,7 +10,7 @@
     background-color: var(--muted-color);
     border-radius: 8px;
     text-align: center;
-    padding-top: 25px;
+    padding-top: 30px;
     padding-bottom: 6px;
     overflow: visible;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -22,7 +22,7 @@
 
 .pokemon-image-container {
     position: absolute;
-    top: -30px;
+    top: -40px;
     left: 50%;
     transform: translateX(-50%);
     width: 80px;
@@ -38,16 +38,19 @@
 
     font-size: small;
     font-weight: 600;
+    background-color: #01426A;
 }
 
 .number {
     display: block;
-    color: #777;
+    color: white;
+    font-weight: bold;
 
 }
 
 .name {
-    color: #333;
+    color: white;
+    font-weight: bold;
 }
 
 
