--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,57 +1,83 @@
-<div class="row ">
+<div class="row full-height">
 
     <!-- Left box-->
-    <div class="col-12 col-sm-6 d-flex flex-column mt-5 float-start border border-black">
+    <div class="col-12 col-md-6 d-flex flex-column mt-5 float-start ">
+
+        <div class="ps-4 d-flex flex-column ">
 
 
 
-        <div class="ps-4 py-4">
+            <div *ngIf="!validateProfileInfofields()" class="mb-4">
+                <div class="d-flex rounded justify-content-center py-1 px-4 ">
+                    <div class="d-flex px-2 justify-content-between gap-3 align-items-center">
+                        <div class="d-flex justify-content-center align-items-center ">
 
+                            <h2 class="fw-bold ">¡Hola José! </h2>
 
-            <div class="d-flex">
-
-                <div class="col col-2">
-
-                </div>
-                <div class="col col-10 d-flex justify-content-around p-2 align-items-center">
-                    <div>
-                        <h5 class="text-black fw-bold">¡Hola! Jose</h5>
-                    </div>
-
-                    <div class="d-flex me-5 div-border rounded justify-items-center  px-3" type="button">
-                        <div class="d-flex px-2 align-items-center">
-                            <div class="me-2 d-flex h-100 ">
-                                <h6 class="text-color">Jose</h6>
-                            </div>
-                            <div class="h-100">
-                                <strong><i class="fa-solid fa-arrow-down text-color"></i></strong>
-                            </div>
+                            <!-- *ngIf="validateProfileInfofields()"-->
+                            <!-- {{trainerProfile?.name}}-->
+                        </div>
+                        <div class="d-flex div-border gap-2 rounded px-2 py-1" style="height: fit-content;">
+                            <i class="fa-solid fa-pencil text-color"></i>
+                            <h6 class="mb-0">Editar perfil</h6>
                         </div>
                     </div>
+                </div>
 
+            </div>
+
+            <!-- end of setting profile-->
+
+
+
+
+            <app-card> </app-card>
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+    <!-- right box-->
+    <div class="col-12 col-md-6 mt-4 float-start ">
+
+
+
+        <!-- list pokemons-->
+
+        <div *ngIf="validateProfileInfofields()">
+            <div class="mb-3 d-flex justify-content-between">
+                <div class="d-flex ">
+
+                    <div class="">
+                        <h2 class="text-color fw-bold">Mis Pokémon</h2>
+                    </div>
 
                 </div>
+
+                <div class="d-flex div-border gap-2 rounded px-3 py-2 align-items-center">
+                    <i class="fa-solid fa-pencil text-color"></i>
+                    <p class="mb-0 text-size-xsm">Editar</p>
+                </div>
+
+
 
             </div>
 
         </div>
 
 
-
-        <app-card>
-
-        </app-card>
-
-    </div>
-    <!-- right box-->
-    <div class="col-12 col-sm-6 mt-5 float-start border border-black">
-
-
-
-
-
-
-
+        <div class=" " *ngIf="validateProfileInfofields()">
+            <app-list></app-list>
+        </div>
     </div>
 
 </div>
