--- a/src/app/components/home/list/list.component.css
+++ b/src/app/components/home/list/list.component.css
@@ -1,57 +1,39 @@
-.pokemon-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
+.viewport {
+    height: 60vh;
+    overflow: auto;
+}
+
+.div-name {
+    font-size: small;
+
 
 }
 
 .pokemon-card {
+    background: #f9f9f9;
+    border: 1px solid #e0e0e0;
+    border-radius: 16px;
+
+}
+
+.pokemon-img {
+    height: 100px;
+    width: auto;
+}
+
+.stat-label {
+    width: 100px;
+    font-size: x-small;
+}
+
+.stat-bar {
+    background-color: #e5e5e5;
+    height: 10px;
     position: relative;
-    background-color: var(--muted-color);
-    border-radius: 8px;
-    text-align: center;
-    padding-top: 25px;
-    padding-bottom: 6px;
-    overflow: visible;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 
-.pokemon-card.selected {
-    background-color: #FFC600;
-}
-
-.pokemon-image-container {
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80px;
-
-}
-
-.pokemon-image-container img {
-    width: 100%;
-
-}
-
-.pokemon-label {
-
-    font-size: small;
-    font-weight: 600;
-}
-
-.number {
-    display: block;
-    color: #777;
-
-}
-
-.name {
-    color: #333;
-}
-
-
-.custom-width-btn {
-    width: 120px;
-    height: 30px;
+.stat-fill {
+    height: 100%;
+    transition: width 0.3s ease;
 }
