--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,17 +7,18 @@
 
 
 
-            <div *ngIf="!validateProfileInfofields()" class="mb-4">
+            <div *ngIf="validateProfileInfofields()" class="mb-4">
                 <div class="d-flex rounded justify-content-center py-1 px-4 ">
                     <div class="d-flex px-2 justify-content-between gap-3 align-items-center">
                         <div class="d-flex justify-content-center align-items-center ">
 
-                            <h2 class="fw-bold ">¡Hola José! </h2>
+                            <h2 class="fw-bold ">¡Hola {{trainerProfile?.name}}! </h2>
 
                             <!-- *ngIf="validateProfileInfofields()"-->
                             <!-- {{trainerProfile?.name}}-->
                         </div>
-                        <div class="d-flex div-border gap-2 rounded px-2 py-1" style="height: fit-content;">
+                        <div class="d-flex div-border gap-2 rounded px-2 py-1" style="height: fit-content;"
+                            (click)="goToEdit()">
                             <i class="fa-solid fa-pencil text-color"></i>
                             <h6 class="mb-0">Editar perfil</h6>
                         </div>
@@ -63,7 +64,7 @@
 
                 </div>
 
-                <div class="d-flex div-border gap-2 rounded px-3 py-2 align-items-center">
+                <div class="d-flex div-border gap-2 rounded px-3 py-2 align-items-center" (click)="goToEditPokemon()">
                     <i class="fa-solid fa-pencil text-color"></i>
                     <p class="mb-0 text-size-xsm">Editar</p>
                 </div>
