--- a/src/app/components/shared/card/card.component.html
+++ b/src/app/components/shared/card/card.component.html
@@ -78,7 +78,7 @@
 
     </div>
 
-    <div class="d-flex div-add-file rounded px-2 py-1 " *ngIf="!validateProfileInfofields()">
+    <div class="d-flex div-add-file rounded px-2 py-1 " *ngIf="!validateProfileInfofields() || editMode">
         <div class="d-flex  col col-12 justify-content-between">
 
             <!-- Input-->
