feat(mobile-header-and-header-component): add goToHome method

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-body-white px-4 shadow-bottom">
     <div class="container-fluid d-flex flex-row">
         <img src="assets/pokemon_logo.png" alt="pokemon_logo.png" height="30">
-        <div class="d-flex " role="search">
+        <div class="d-flex " (click)="goToHome()">
             <div class="d-flex me-5 div-border rounded justify-items-center py-1 px-4" type="button">
                 <div class="d-flex px-2">
                     <div class="me-2">
