--- a/src/app/components/mobile-header/mobile-header.component.html
+++ b/src/app/components/mobile-header/mobile-header.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid d-flex flex-row justify-content-between">
         <img src="assets/pokemon_logo.png" alt="pokemon_logo.png" height="30">
 
-        <div class="d-flex  div-border rounded justify-items-center " type="button">
+        <div class="d-flex  div-border rounded justify-items-center " (click)="goToHome()" type="button">
             <div class="d-flex px-3">
                 <div class="me-2">
 
